--- a/.gitignore
+++ b/.gitignore
@@ -494,3 +494,5 @@ fabric.properties
 # End of https://www.toptal.com/developers/gitignore/api/csharp,visualstudiocode,rider
 
 .idea/
+*.args.json
+launchSettings.json
